# llm-lora-classification

./: .gitignore  pyproject.toml  zeroshot.sh  zeroshot2.sh
datasets/snli/: Makefile  README.md  conv.py  label2id.json
src/: count.py  pipeline-sample.py  train.py  zeroshot.py  zeroshot2.py
