[tool.poetry]
name = "llm-lora-classification"
version = "0.1.0"
description = ""
authors = ["hppRC <hpp.ricecake@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.10"
torch = { version = "^2.5.1+cu118", source = "pytorch-gpu-src" }
torchvision = { version = "^0.20.1+cu118", source = "pytorch-gpu-src" }
torchaudio = { version = "^2.5.1+cu118", source = "pytorch-gpu-src" }
transformers = { extras = ["ja", "sentencepiece"], version = "^4.46" }
accelerate = "^1.0.1"
bitsandbytes = "^0.44.1"
more-itertools = "^10.5.0"
numpy = "^1.26"
pandas = "^2.2"
peft = "^0.13"
scikit-learn = "^1.2.2"
tqdm = "^4.65.0"
typed-argument-parser = "^1.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
